load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary")
load("//:build/wd_ts_project.bzl", "wd_ts_project")
load("//:build/wd_ts_test.bzl", "wd_ts_test")
load("//:build/wd_ts_type_test.bzl", "wd_ts_type_test")

wd_ts_project(
    name = "types_lib",
    srcs = glob(
        [
            "src/**/*",
            "scripts/*.ts",
        ],
        exclude = ["src/worker/**/*"],
    ),
    deps = [
        "//:node_modules/@types",
        "//:node_modules/@workerd/jsg",
        "//:node_modules/capnp-ts",
        "//:node_modules/esbuild",
        "//:node_modules/prettier",
        "//:node_modules/typescript",
    ],
)

js_binary(
    name = "build_types_bin",
    data = [
        ":types_lib",
    ],
    entry_point = "scripts/build-types.js",
)

js_run_binary(
    name = "types",
    srcs = [
        "scripts/config.capnp",
        ":types_worker",
        "//:node_modules/prettier",
        "//src/workerd/server:workerd",
        # Add explicit dependencies on type definition files
    ] + glob(["defines/**/*.d.ts"]),
    out_dirs = ["definitions"],
    silent_on_success = False,  # Always enable logging for debugging
    tags = ["manual"],  # Add manual tag so it doesn't build by default
    tool = ":build_types_bin",
    visibility = ["//visibility:public"],
)

js_binary(
    name = "build_worker_bin",
    data = [
        ":types_lib",
    ],
    entry_point = "scripts/build-worker.js",
    node_options = ["--enable-source-maps"],
)

# This is a wrapper target that only rebuilds the types when necessary
js_run_binary(
    name = "build_types_when_needed",
    srcs = [
        "scripts/config.capnp",
        ":types_worker",
        "//:node_modules/prettier",
        "//src/workerd/server:workerd",
    ] + glob(["defines/**/*.d.ts"]) + glob(["src/transforms/**/*.ts"]),
    out_dirs = ["definitions"],
    tool = ":build_types_bin",
    visibility = ["//visibility:public"],
)

js_run_binary(
    name = "types_worker",
    srcs = [
        "//:node_modules/@workerd/jsg",
        "//:node_modules/capnp-ts",
        "//:node_modules/esbuild",
        "//:node_modules/typescript",
        "//src/workerd/tools:param_extractor",
    ] + glob(
        [
            "src/**/*.ts",
            "defines/**/*.ts",
        ],
        exclude = ["src/cli/**/*"],
    ),
    outs = ["dist/index.mjs"],
    tool = ":build_worker_bin",
)

[
    wd_ts_test(
        src = src,
        node_options = ["--enable-source-maps"],
        deps = [":types_lib"],
    )
    for src in glob(["test/**/*.spec.ts"])
]

[
    wd_ts_type_test(src = src)
    for src in glob(["test/types/**/*.ts"])
]
