load("@workerd//:build/wd_ts_bundle.bzl", "wd_ts_bundle")

wd_ts_bundle(
    name = "bun",
    eslintrc_json = "eslint.config.mjs",
    gen_compile_cache = True,
    import_name = "bun",
    internal_modules = glob([
        "internal/*.ts",
    ]),
    modules = [
        "bun.ts",
        "dns.ts",
        "sqlite.ts",
        "test.ts",
        "ffi.ts",
    ],
    schema_id = "0xbcc8f57c63814006",  # Unique schema ID for bun runtime
    tsconfig_json = "tsconfig.json",
    deps = [
        "//:node_modules/@types/node",
    ],
)
