load("@workerd//:build/wd_ts_bundle.bzl", "wd_ts_bundle")

wd_ts_bundle(
    name = "cloudflare",
    eslintrc_json = ".eslintrc.json",
    import_name = "cloudflare",
    internal_modules = glob(
        [
            "internal/*.ts",
            "internal/*.js",
        ],
        allow_empty = True,
    ),
    modules = glob(
        [
            "*.ts",
            "*.js",
        ],
        allow_empty = True,
    ),
    schema_id = "0xbcc8f57c63814006",
    tsconfig_json = "tsconfig.json",
)
