load("@workerd//:build/wd_ts_bundle.bzl", "wd_ts_bundle")

wd_ts_bundle(
    name = "node",
    eslintrc_json = ".eslintrc.json",
    import_name = "node",
    internal_modules = glob([
        "internal/*.ts",
        "internal/*.js",
    ]),
    modules = glob([
        "*.ts",
        "*.js",
        "stream/*.js",
    ]),
    schema_id = "0xbcc8f57c63814005",
    tsconfig_json = "tsconfig.json",
    deps = ["//:node_modules/@types/node"],
)
