load("@workerd//:build/wd_compile_cache.bzl", "wd_compile_cache")
load("@workerd//:build/wd_ts_bundle.bzl", "wd_ts_bundle")

wd_ts_bundle(
    name = "node",
    eslintrc_json = "eslint.config.mjs",
    import_name = "node",
    internal_modules = glob([
        "internal/*.ts",
        "internal/*.js",
    ]),
    modules = glob([
        "*.ts",
        "*.js",
        "assert/*.ts",
        "stream/*.js",
        "path/*.ts",
        "util/*.ts",
    ]),
    schema_id = "0xbcc8f57c63814005",
    tsconfig_json = "tsconfig.json",
    deps = ["//:node_modules/@types/node"],
)

wd_compile_cache(
    name = "compile_cache",
    srcs = [
        ":assert.js",
    ],
)
