load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("//:build/python_metadata.bzl", "BUNDLE_VERSION_INFO")
load(":helpers.bzl", "pyodide_extra", "python_bundles")

pyodide_extra()

python_bundles()

alias(
    name = "pyodide.capnp.bin",
    actual = "pyodide.capnp.bin@rule@0.26.0a2",
    visibility = ["//visibility:public"],
)

alias(
    name = "pyodide.capnp.bin@rule",
    actual = "pyodide.capnp.bin@rule@0.26.0a2",
    visibility = ["//visibility:public"],
)

alias(
    name = "pyodide",
    actual = "pyodide@0.26.0a2",
    visibility = ["//visibility:public"],
)

write_file(
    name = "bundle_version_info",
    out = "bundle_version_info.json",
    content = [json.encode(BUNDLE_VERSION_INFO)],
)
