load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("//:build/python_metadata.bzl", "BUNDLE_VERSION_INFO")
load("//:build/wd_cc_embed.bzl", "wd_cc_embed")
load(":helpers.bzl", "pyodide_extra", "pyodide_static", "python_bundles")

pyodide_extra()

python_bundles()

pyodide_static()

DEV_VERSION = BUNDLE_VERSION_INFO["development"]["real_pyodide_version"]

alias(
    name = "pyodide.capnp.bin",
    actual = "pyodide.capnp.bin@rule@" + DEV_VERSION,
    visibility = ["//visibility:public"],
)

wd_cc_embed(
    name = "python-entrypoint",
    src = "python-entrypoint.js",
    visibility = ["//visibility:public"],
)

alias(
    name = "pyodide.capnp.bin@rule",
    actual = "pyodide.capnp.bin@rule@" + DEV_VERSION,
    visibility = ["//visibility:public"],
)

alias(
    name = "pyodide",
    actual = "pyodide@" + DEV_VERSION,
    visibility = ["//visibility:public"],
)

write_file(
    name = "bundle_version_info",
    out = "bundle_version_info.json",
    content = [json.encode(BUNDLE_VERSION_INFO)],
)
