"""Workerd clang-tidy plugin.

`workerd-lint` is a clang-tidy module providing workerd-specific static checks:

  - `jsg-visit-for-gc`: validates JSG resource types correctly visit their
    GC roots.
  - `workerd-consume`: validates that calls to methods annotated with
    WD_CONSUME are made through consume() when invoked on kj::Ptr.
  - `workerd-unsafe-continuation-capture`: flags lambdas passed to async
    sinks (e.g. kj::Promise::then) that capture bare references, raw
    pointers, or non-owning views.

The plugin is loaded into clang-tidy via `--load=<path>`. Symbols defined
in the host clang-tidy binary (ClangTidyCheck vtable, ClangTidyModuleRegistry,
etc.) are resolved at dlopen() time. This requires the host clang-tidy to
have been built with LLVM_ENABLE_PLUGINS=ON, CLANG_PLUGIN_SUPPORT=ON, and
LLVM_ENABLE_RTTI=ON; the binary published by cloudflare/workerd-tools
(version >= clang-tidy-22.1.5) meets all three.

The source files are exported via `exports_files` so downstream projects can
rebuild the plugin against their own clang/LLVM headers (e.g. linking
against a system libclang rather than the workerd-tools dev archive).
"""

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_shared_library.bzl", "cc_shared_library")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

exports_files([
    "consume.c++",
    "consume.h",
    "consume-negative-test.c++",
    "consume-positive-test.c++",
    "consume-test.sh",
    "iocontext-run-manual-capture-negative-test.c++",
    "iocontext-run-manual-capture-positive-test.c++",
    "iocontext-run-manual-capture-test.sh",
    "workerd-lint.c++",
    "visit-for-gc.c++",
    "visit-for-gc.h",
    "unsafe-continuation-capture.c++",
    "unsafe-continuation-capture.h",
    "tests/unsafe-continuation-capture-test.c++",
])

filegroup(
    name = "srcs",
    srcs = [
        "consume.c++",
        "unsafe-continuation-capture.c++",
        "visit-for-gc.c++",
        "workerd-lint.c++",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "hdrs",
    srcs = [
        "consume.h",
        "unsafe-continuation-capture.h",
        "visit-for-gc.h",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "workerd-lint-static",
    srcs = [":srcs"],
    hdrs = [":hdrs"],
    copts = select({
        # workerd-tools clang-tidy links against libstdc++ on Linux; the
        # plugin must match. macOS uses libc++ (Apple default).
        "@platforms//os:linux": ["-stdlib=libstdc++"],
        "//conditions:default": [],
    }),
    tags = ["manual"],
    # No clang-tidy is published by workerd-tools for Windows.
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = ["@clang_tidy_dev_headers"],
)

cc_shared_library(
    name = "workerd-lint",
    tags = ["manual"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    user_link_flags = select({
        # On macOS, a host-loaded plugin must defer resolution of clang-tidy
        # symbols (ClangTidyCheck vtable etc.) to dlopen() time. ld64 still
        # supports -undefined dynamic_lookup for this case.
        "@platforms//os:macos": [
            "-undefined",
            "dynamic_lookup",
        ],
        "//conditions:default": [
            "-stdlib=libstdc++",
        ],
    }),
    visibility = ["//visibility:public"],
    deps = [":workerd-lint-static"],
)

sh_test(
    name = "consume-test",
    srcs = ["consume-test.sh"],
    data = [
        ":consume-negative-test.c++",
        ":consume-positive-test.c++",
        ":workerd-lint",
        "//tools:clang-tidy",
    ],
    tags = ["no-asan"],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

# Tests the `custom-iocontext-run-manual-capture` query-based check, which is
# defined in the workerd `.clang-tidy` config rather than in the plugin. The
# test drives clang-tidy against the real merged config, so it does not need the
# plugin loaded.
sh_test(
    name = "iocontext-run-manual-capture-test",
    srcs = ["iocontext-run-manual-capture-test.sh"],
    data = [
        ":iocontext-run-manual-capture-negative-test.c++",
        ":iocontext-run-manual-capture-positive-test.c++",
        "//:merged_clang_tidy_config",
        "//tools:clang-tidy",
    ],
    tags = ["no-asan"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)
