load("//:build/wd_rust_crate.bzl", "wd_rust_crate")

wd_rust_crate(
    name = "api",
    cxx_bridge_deps = ["//src/rust/jsg"],
    cxx_bridge_srcs = ["lib.rs"],
    proc_macro_deps = [
        "//src/rust/jsg-macros",
    ],
    test_deps = ["//src/rust/jsg-test"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/rust/jsg",
        "@crates_vendor//:thiserror",
    ],
)
