load("@workerd//:build/wd_cc_library.bzl", "wd_cc_library")
load("@workerd//:build/wd_rust_crate.bzl", "rust_cxx_include", "wd_rust_crate")

wd_rust_crate(
    name = "cxx-integration",
    cxx_bridge_deps = [
        "@capnp-cpp//src/kj",
    ],
    cxx_bridge_src = "lib.rs",
    visibility = ["//visibility:public"],
    deps = [
        ":bridge",
        "@crates_vendor//:tokio",
        "@crates_vendor//:tracing",
        "@workerd-cxx//kj-rs",
    ],
)

wd_cc_library(
    name = "bridge",
    srcs = ["bridge.c++"],
    hdrs = ["bridge.h"],
    linkstatic = select({
        "@platforms//os:windows": True,
        "//conditions:default": False,
    }),
    deps = [
        ":cxx-include",
        "@capnp-cpp//src/kj",
    ],
)

rust_cxx_include(
    name = "cxx-include",
    include_prefix = "rust",
    visibility = ["//visibility:public"],
)
