load("//:build/wd_rust_crate.bzl", "wd_rust_crate")

wd_rust_crate(
    name = "cxx-integration",
    cxx_bridge_deps = [
        "@capnp-cpp//src/kj",
    ],
    cxx_bridge_src = "lib.rs",
    visibility = ["//visibility:public"],
    deps = [
        "@crates_vendor//:tokio",
        "@crates_vendor//:tracing",
        "@workerd-cxx//kj-rs",
    ],
)
