load("@workerd//:build/wd_cc_library.bzl", "wd_cc_library")
load("//:build/wd_rust_crate.bzl", "wd_rust_crate")

wd_cc_library(
    name = "bridge",
    hdrs = ["bridge.h"],
)

wd_rust_crate(
    name = "dns",
    cxx_bridge_deps = ["@workerd-v8//:v8"],
    cxx_bridge_src = "lib.rs",
    test_deps = [],
    visibility = ["//visibility:public"],
    deps = [
        "//src/rust/cxx-integration",
        "@crates_vendor//:thiserror",
    ],
)
