load("//:build/wd_cc_library.bzl", "wd_cc_library")
load("//:build/wd_rust_crate.bzl", "wd_rust_crate")

wd_rust_crate(
    name = "jsg",
    cxx_bridge_deps = ["//src/workerd/jsg:jsg-core"],
    cxx_bridge_features = ["-parse_headers"],
    cxx_bridge_local_defines = ["JSG_IMPLEMENTATION"],
    cxx_bridge_srcs = [
        "lib.rs",
        "v8.rs",
    ],
    cxx_bridge_tags = ["no-clang-tidy"],
    visibility = ["//visibility:public"],
    deps = [":ffi"],
)

wd_cc_library(
    name = "bridge",
    srcs = [],
    hdrs = ["jsg.h"],
    local_defines = ["JSG_IMPLEMENTATION"],
    tags = ["no-clang-tidy"],
    visibility = ["//visibility:public"],
    deps = [":jsg"],
)

wd_cc_library(
    name = "ffi",
    srcs = ["ffi.c++"],
    hdrs = [
        "ffi.h",
    ],
    local_defines = ["JSG_IMPLEMENTATION"],
    tags = ["no-clang-tidy"],
    textual_hdrs = [
        "ffi-inl.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":lib.rs@cxx",
        ":v8.rs@cxx",
        "//src/workerd/jsg:jsg-core",
        "@workerd-cxx//kj-rs",
        "@workerd-v8//:v8",
    ],
)
